--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <body>
 
   <header>
-    <h1>Mijn CV</h1>
+    <h1>Contact</h1>
 
     <a href="index.html" class="btn">Home</a>
     <a href="mijncv.html" class="btn">Mijn CV</a>
